# Vokabulator

./: LICENSE  README.md  export_to_Brainyoo.py  navigium_mit_Textbelgen.py  pyproject.toml  vokabel_gui.py  vokabel_gui3.py  vokabel_gui3.spec
